# FIDSUS

./: .gitignore  main.py  pyproject.toml
audit/fidsus_affinity_diagnosis/: NSLKDD_affinity_topn_class_coverage.csv  NSLKDD_affinity_topn_js_to_global.csv  NSLKDD_affinity_topn_label_entropy.csv  NSLKDD_affinity_vs_label_similarity_correlation.csv  UNSW_affinity_topn_class_coverage.csv  UNSW_affinity_topn_js_to_global.csv  UNSW_affinity_topn_label_entropy.csv  UNSW_affinity_vs_label_similarity_correlation.csv  affinity_correlation_summary.csv  affinity_correlation_summary_NSLKDD.csv  affinity_correlation_summary_UNSW.csv  affinity_topn_analysis_NSLKDD.csv  affinity_topn_analysis_UNSW.csv  confusion_pair_similarity_match.csv  family_fine_gap.csv  fidsus_affinity_problem_report.md  method_comparison_family_fine_gap.csv  method_comparison_intra_family_confusion.csv
configs/: attack_family_mapping.yaml
docs/: architecture.md  paper-code-mapping.md  usage-guide.md
docs/audit/: audit-methodology.md  canonical_labeled_summary_report.txt  dataset_manifest_v2_summary.txt  nslkdd_audit_report.txt  uav_nidd_audit_report.txt  unsw_audit_report.txt
scripts/: audit_nslkdd.py  audit_uav_nidd.py  audit_uav_nidd_deep.py  audit_unsw.py  compare_ablation_results.py  diagnosis_analysis.py  fidsus_affinity_diagnosis.py  generate_affinity_report.py  generate_topk_charts.py  run_family_eval.py  run_family_eval_batch.py  run_family_eval_pipeline.py
system/: main.py  run.sh
system/audit/: __init__.py  audited_server.py  instrument.py
system/eval/: __init__.py  family_eval.py
system/experiments/: algorithm_comparison.json  default.json  diagnosis_debug.json  diagnosis_full.json  family_eval.json  full_sweep.json  topk_audit_nslkdd.json  topk_audit_unsw.json
(+77 files in other folders)
